--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
             align-items: center;
         }
 
-        /* Matrix Arka Plan */
+        /* Arka Plan Matrix */
         #c { position: fixed; top: 0; left: 0; z-index: -1; opacity: 0.1; }
 
         /* Sağ Üst Saat */
         #clock {
             position: fixed; top: 20px; right: 20px;
             text-align: right; font-size: 14px;
-            letter-spacing: 2px; z-index: 110;
+            letter-spacing: 2px; z-index: 200;
         }
 
-        /* Yılan Parlama Efekti (Her Zaman Görünür) */
+        /* HER AN GÖZÜKEN YILAN PARLAMA EFEKTİ */
         .bg-text {
             position: fixed; width: 100%; text-align: center;
-            z-index: 50; pointer-events: none;
+            z-index: 10; pointer-events: none;
             font-size: 9vw; font-weight: 900; letter-spacing: 15px;
             text-transform: uppercase;
         }
@@ -52,11 +52,12 @@
 
         @keyframes snake { to { background-position: 200% center; } }
 
-        /* Giriş Ekranı Kaplaması */
+        /* Giriş Ekranı (Sadece buton ve loglar için) */
         #overlay {
-            position: fixed; inset: 0; background: var(--dark);
+            position: fixed; inset: 0;
             z-index: 100; display: flex; flex-direction: column;
             justify-content: center; align-items: center;
+            background: rgba(5, 0, 0, 0.5); /* Yazıların görünmesi için yarı şeffaf */
         }
 
         .open-btn {
@@ -67,7 +68,6 @@
         }
         .open-btn:hover { background: var(--red); color: #000; box-shadow: 0 0 40px var(--red); }
 
-        /* Yükleme Logları */
         #boot-logs {
             display: none; color: var(--red); font-size: 14px;
             text-align: left; width: 280px; margin-top: 20px;
@@ -76,11 +76,11 @@
 
         /* Ana Panel */
         #terminal {
-            display: none; position: relative; z-index: 10;
+            display: none; position: relative; z-index: 120;
             width: 400px; padding: 50px 30px;
             border: 1px solid var(--red);
-            background: rgba(0,0,0,0.95);
-            box-shadow: 0 0 50px rgba(255,0,0,0.1);
+            background: rgba(0,0,0,0.9);
+            box-shadow: 0 0 50px rgba(255,0,0,0.15);
         }
 
         .main-data {
@@ -131,7 +131,7 @@
 </div>
 
 <script>
-    // Matrix Efekti
+    // Matrix Arka Plan
     const canvas = document.getElementById('c');
     const ctx = canvas.getContext('2d');
     canvas.width = window.innerWidth;
@@ -159,12 +159,14 @@
     // Saat
     function updateClock() {
         const now = new Date();
-        document.getElementById('clock').innerHTML = now.toLocaleString('tr-TR').replace(',', '<br>');
+        const dateStr = now.toLocaleDateString('tr-TR');
+        const timeStr = now.toLocaleTimeString('tr-TR');
+        document.getElementById('clock').innerHTML = dateStr + "<br>" + timeStr;
     }
     setInterval(updateClock, 1000);
     updateClock();
 
-    // Giriş ve Boot Animasyonu
+    // Giriş Animasyonu
     function startBoot() {
         const btn = document.querySelector('.open-btn');
         const logs = document.getElementById('boot-logs');
