--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <div id="clock"></div>
 
 <div class="bg-text top-bg shine">ANKEB7T</div>
-<div class="bg-text bot-bg shine">@C4KSIBER</div>
+<div class="bg-text bot-bg shine">ZİRVE</div>
 
 <div id="overlay">
     <button class="open-btn" onclick="startBoot()">[ OPEN ]</button>
