--- a/index.html
+++ b/index.html
@@ -2,192 +2,133 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ANKEB7T</title>
+<title>DARK TERMINAL</title>
 
 <style>
-:root { --red:#ff0000; --dark:#050000; }
-body,html{
-margin:0;padding:0;background:var(--dark);color:var(--red);
-font-family:'Courier New',monospace;height:100vh;overflow:hidden;
-display:flex;justify-content:center;align-items:center;
+body{
+    margin:0;
+    background:black;
+    color:#00ff00;
+    font-family: monospace;
+    overflow:hidden;
 }
 
-#c{position:fixed;top:0;left:0;z-index:-1;opacity:.1}
-
-#clock{
-position:fixed;top:20px;right:20px;text-align:right;
-font-size:14px;letter-spacing:2px;z-index:200;
+canvas{
+    position:fixed;
+    top:0;
+    left:0;
 }
 
-.bg-text{
-position:fixed;width:100%;text-align:center;z-index:10;
-pointer-events:none;font-size:9vw;font-weight:900;
-letter-spacing:15px;text-transform:uppercase;
-}
-.top-bg{top:12%}
-.bot-bg{bottom:12%}
-
-.shine{
-background:linear-gradient(120deg,#200 35%,#fff 50%,#200 65%);
-background-size:200% auto;
--webkit-background-clip:text;
--webkit-text-fill-color:transparent;
-animation:snake 3.5s linear infinite;
-}
-@keyframes snake{to{background-position:200% center}}
-
-#overlay{
-position:fixed;inset:0;z-index:100;
-display:flex;flex-direction:column;
-justify-content:center;align-items:center;
-background:rgba(5,0,0,.4);
+#centerBox{
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    text-align:center;
 }
 
-.open-btn{
-padding:20px 60px;border:1px solid var(--red);
-background:transparent;color:var(--red);
-cursor:pointer;letter-spacing:15px;font-size:22px;
-transition:.4s;
-}
-.open-btn:hover{
-background:var(--red);color:#000;
-box-shadow:0 0 40px var(--red);
+button{
+    padding:15px 40px;
+    font-size:20px;
+    background:black;
+    color:#00ff00;
+    border:2px solid #00ff00;
+    cursor:pointer;
 }
 
-#boot-logs{
-display:none;color:var(--red);
-font-size:14px;text-align:left;
-width:280px;margin-top:20px;
+button:hover{
+    background:#00ff00;
+    color:black;
 }
 
 #terminal{
-display:none;position:relative;z-index:120;
-width:400px;padding:50px 30px;
-border:1px solid var(--red);
-background:rgba(0,0,0,.9);
-box-shadow:0 0 50px rgba(255,0,0,.15);
-}
-
-.main-data{
-text-align:center;font-size:32px;
-font-weight:bold;margin-bottom:40px;
-letter-spacing:10px;
-}
-
-.links{display:flex;flex-direction:column;gap:15px}
-
-.link-item{
-padding:15px;border:1px solid #300;
-text-decoration:none;color:var(--red);
-display:flex;justify-content:center;
-letter-spacing:3px;
-}
-.link-item:hover{
-border-color:var(--red);
-background:rgba(255,0,0,.1);
-}
-
-.footer{
-margin-top:40px;text-align:center;
-font-size:14px;letter-spacing:12px;
-opacity:.7;
+    padding:20px;
+    white-space:pre-line;
 }
 </style>
 </head>
 
 <body>
 
-<!-- TELİFSİZ MÜZİK -->
-<audio id="music" loop>
-<source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+<canvas id="matrix"></canvas>
+
+<div id="centerBox">
+    <h1>SYSTEM ACCESS</h1>
+    <button onclick="startHack()">ENTER</button>
+</div>
+
+<audio id="hackSound" loop>
+<source src="https://cdn.pixabay.com/audio/2022/03/15/audio_c8f7a8e9a7.mp3" type="audio/mp3">
 </audio>
 
-<canvas id="c"></canvas>
-<div id="clock"></div>
-
-<div class="bg-text top-bg shine">ANKEB7T</div>
-<div class="bg-text bot-bg shine">ZIRVE</div>
-
-<div id="overlay">
-<button class="open-btn" onclick="startBoot()">[ OPEN ]</button>
-<div id="boot-logs"></div>
-</div>
-
-<div id="terminal">
-<div class="main-data">ANKEB7T</div>
-
-<div class="links">
-<a href="https://t.me/allesfurdie" target="_blank" class="link-item">TELEGRAM</a>
-<a href="https://instagram.com/hissedilme" target="_blank" class="link-item">INSTAGRAM</a>
-<a href="https://wa.me/998998780248" target="_blank" class="link-item">WHATSAPP</a>
-</div>
-
-<div class="footer">ALLES FUR DIE</div>
-</div>
+<div id="terminal"></div>
 
 <script>
-// MATRIX
-const canvas=document.getElementById('c');
-const ctx=canvas.getContext('2d');
-canvas.width=window.innerWidth;
-canvas.height=window.innerHeight;
-const str="01";const matrix=str.split("");
-const font_size=14;const columns=canvas.width/font_size;
-const drops=Array(Math.floor(columns)).fill(1);
+/* MATRIX EFFECT */
+let canvas = document.getElementById("matrix");
+let ctx = canvas.getContext("2d");
+
+canvas.height = window.innerHeight;
+canvas.width = window.innerWidth;
+
+let letters = "01";
+letters = letters.split("");
+
+let fontSize = 14;
+let columns = canvas.width / fontSize;
+let drops = [];
+
+for(let x=0;x<columns;x++) drops[x]=1;
 
 function draw(){
-ctx.fillStyle="rgba(0,0,0,.05)";
-ctx.fillRect(0,0,canvas.width,canvas.height);
-ctx.fillStyle="#200";
-ctx.font=font_size+"px arial";
-for(let i=0;i<drops.length;i++){
-const text=matrix[Math.floor(Math.random()*matrix.length)];
-ctx.fillText(text,i*font_size,drops[i]*font_size);
-if(drops[i]*font_size>canvas.height && Math.random()>0.975) drops[i]=0;
-drops[i]++;
-}}
-setInterval(draw,40);
+    ctx.fillStyle="rgba(0,0,0,0.05)";
+    ctx.fillRect(0,0,canvas.width,canvas.height);
 
-// CLOCK
-function updateClock(){
-const now=new Date();
-document.getElementById('clock').innerHTML=
-now.toLocaleDateString('tr-TR')+"<br>"+now.toLocaleTimeString('tr-TR');
+    ctx.fillStyle="#0F0";
+    ctx.font=fontSize+"px monospace";
+
+    for(let i=0;i<drops.length;i++){
+        let text=letters[Math.floor(Math.random()*letters.length)];
+        ctx.fillText(text,i*fontSize,drops[i]*fontSize);
+
+        if(drops[i]*fontSize>canvas.height && Math.random()>0.975)
+            drops[i]=0;
+
+        drops[i]++;
+    }
 }
-setInterval(updateClock,1000);
-updateClock();
+setInterval(draw,33);
 
-// BOOT + MÜZİK
-function startBoot(){
 
-document.getElementById("music").play();
-
-const btn=document.querySelector('.open-btn');
-const logs=document.getElementById('boot-logs');
-btn.style.display='none';
-logs.style.display='block';
-
-const lines=[
-"> Initializing boot sequence...",
-"> Bypassing local encryption...",
-"> Connection established.",
-"> Accessing identity core...",
-"> System Online."
+/* TERMINAL TEXT EFFECT */
+let lines = [
+"Connecting to dark network...",
+"Bypassing firewall...",
+"Tracking IP: 192.168.7."+Math.floor(Math.random()*255),
+"Encrypting data...",
+"Uploading packets...",
+"ACCESS GRANTED",
+"",
+"Telegram: @allesfurdie",
+"Instagram: @hissedilme",
+"Contact: +998998780248",
+"",
+"ALL SYSTEMS UNDER CONTROL"
 ];
 
-let i=0;
-const interval=setInterval(()=>{
-if(i<lines.length){
-logs.innerHTML+=lines[i]+"<br>";
-i++;
-}else{
-clearInterval(interval);
-setTimeout(()=>{
-document.getElementById('overlay').style.display="none";
-document.getElementById('terminal').style.display="block";
-},500);
-}},400);
+function typeWriter(i){
+    if(i < lines.length){
+        let term = document.getElementById("terminal");
+        term.innerHTML += lines[i] + "\\n";
+        setTimeout(()=>typeWriter(i+1),800);
+    }
+}
+
+/* START BUTTON */
+function startHack(){
+    document.getElementById("centerBox").style.display="none";
+    document.getElementById("hackSound").play();
+    typeWriter(0);
 }
 </script>
 
