--- a/index.html
+++ b/index.html
@@ -48,11 +48,6 @@ background:rgba(5,0,0,.4);
 padding:20px 60px;border:1px solid var(--red);
 background:transparent;color:var(--red);
 cursor:pointer;letter-spacing:15px;font-size:22px;
-transition:.4s;
-}
-.open-btn:hover{
-background:var(--red);color:#000;
-box-shadow:0 0 40px var(--red);
 }
 
 #boot-logs{
@@ -66,7 +61,6 @@ display:none;position:relative;z-index:120;
 width:400px;padding:50px 30px;
 border:1px solid var(--red);
 background:rgba(0,0,0,.9);
-box-shadow:0 0 50px rgba(255,0,0,.15);
 }
 
 .main-data{
@@ -83,10 +77,6 @@ text-decoration:none;color:var(--red);
 display:flex;justify-content:center;
 letter-spacing:3px;
 }
-.link-item:hover{
-border-color:var(--red);
-background:rgba(255,0,0,.1);
-}
 
 .footer{
 margin-top:40px;text-align:center;
@@ -98,9 +88,17 @@ opacity:.7;
 
 <body>
 
-<!-- HACKER AMBIENCE MÜZİK -->
+<!-- 🎧 SESLER -->
 <audio id="music" loop>
-<source src="https://cdn.pixabay.com/audio/2022/03/15/audio_c8a4d19a92.mp3" type="audio/mpeg">
+<source src="https://cdn.pixabay.com/audio/2022/03/15/audio_c8a4d19a92.mp3">
+</audio>
+
+<audio id="typing">
+<source src="https://cdn.pixabay.com/audio/2022/03/15/audio_5a9c4e9a91.mp3">
+</audio>
+
+<audio id="beep">
+<source src="https://cdn.pixabay.com/audio/2021/08/04/audio_12b0c7443d.mp3">
 </audio>
 
 <canvas id="c"></canvas>
@@ -132,15 +130,16 @@ const canvas=document.getElementById('c');
 const ctx=canvas.getContext('2d');
 canvas.width=window.innerWidth;
 canvas.height=window.innerHeight;
-const str="01";const matrix=str.split("");
-const font_size=14;const columns=canvas.width/font_size;
+const matrix="01".split("");
+const font_size=14;
+const columns=canvas.width/font_size;
 const drops=Array(Math.floor(columns)).fill(1);
 
 function draw(){
 ctx.fillStyle="rgba(0,0,0,.05)";
 ctx.fillRect(0,0,canvas.width,canvas.height);
 ctx.fillStyle="#200";
-ctx.font=font_size+"px arial";
+ctx.font=font_size+"px monospace";
 for(let i=0;i<drops.length;i++){
 const text=matrix[Math.floor(Math.random()*matrix.length)];
 ctx.fillText(text,i*font_size,drops[i]*font_size);
@@ -150,18 +149,20 @@ drops[i]++;
 setInterval(draw,40);
 
 // CLOCK
-function updateClock(){
+setInterval(()=>{
 const now=new Date();
-document.getElementById('clock').innerHTML=
-now.toLocaleDateString('tr-TR')+"<br>"+now.toLocaleTimeString('tr-TR');
-}
-setInterval(updateClock,1000);
-updateClock();
+clock.innerHTML=now.toLocaleDateString()+"<br>"+now.toLocaleTimeString();
+},1000);
 
-// BOOT + MÜZİK
+// BOOT + SESLER
 function startBoot(){
 
-document.getElementById("music").play();
+beep.play();
+setTimeout(()=>typing.play(),600);
+setTimeout(()=>{
+music.volume=0.4;
+music.play();
+},1500);
 
 const btn=document.querySelector('.open-btn');
 const logs=document.getElementById('boot-logs');
@@ -184,8 +185,8 @@ i++;
 }else{
 clearInterval(interval);
 setTimeout(()=>{
-document.getElementById('overlay').style.display="none";
-document.getElementById('terminal').style.display="block";
+overlay.style.display="none";
+terminal.style.display="block";
 },500);
 }},400);
 }
