--- a/index.html
+++ b/index.html
@@ -6,88 +6,59 @@
 
 <style>
 body{
-    margin:0;
     background:black;
-    color:#00ff00;
+    color:red;
     font-family:monospace;
     text-align:center;
+    overflow:hidden;
 }
 
-#openScreen{
-    position:fixed;
-    width:100%;
-    height:100%;
-    background:black;
-    display:flex;
-    align-items:center;
-    justify-content:center;
+.top{
     font-size:60px;
+    margin-top:120px;
+    letter-spacing:10px;
+}
+
+.bottom{
+    font-size:55px;
+    margin-top:200px;
+    letter-spacing:8px;
+    color:white;
+}
+
+button{
+    margin-top:100px;
+    padding:20px 60px;
+    background:black;
+    border:2px solid red;
+    color:red;
+    font-size:22px;
     cursor:pointer;
 }
 
-#panel{
-    display:none;
-    padding-top:50px;
-}
-
-h1{
-    font-size:70px;
-    color:red;
-    text-shadow:0 0 20px red;
-}
-
-.links{
-    margin-top:40px;
-    font-size:22px;
+button:hover{
+    background:red;
+    color:black;
 }
 </style>
 </head>
 
 <body>
 
-<div id="openScreen" onclick="start()">
-OPEN
-</div>
+<div class="top">ZİRVE</div>
 
-<div id="panel">
+<button onclick="start()">OPEN</button>
 
-<h1>ZİRVE</h1>
+<div class="bottom">ALLES FÜR DIE</div>
 
-<div id="clock"></div>
-
-<div class="links">
-Telegram: @allesfurdie <br>
-Instagram: @hissedilme <br>
-WhatsApp: +998998780248
-</div>
-
-</div>
-
-<!-- HACKER AMBIENCE -->
-<audio id="bg" loop>
-<source src="https://cdn.pixabay.com/audio/2022/03/15/audio_c8a4d19a92.mp3" type="audio/mpeg">
-</audio>
-
-<!-- TYPING SOUND -->
-<audio id="type">
-<source src="https://cdn.pixabay.com/audio/2021/08/04/audio_12b0c7443f.mp3" type="audio/mpeg">
+<audio id="music" loop>
+<source src="https://cdn.pixabay.com/audio/2023/03/14/audio_0f5b0b8f6c.mp3" type="audio/mpeg">
 </audio>
 
 <script>
-
 function start(){
-    document.getElementById("openScreen").style.display="none";
-    document.getElementById("panel").style.display="block";
-    document.getElementById("bg").play();
-    document.getElementById("type").play();
+    document.getElementById("music").play();
 }
-
-setInterval(()=>{
-    let d=new Date();
-    document.getElementById("clock").innerHTML=
-    d.toLocaleDateString()+" "+d.toLocaleTimeString();
-},1000);
-
 </script>
 
 </body>
