--- a/index.html
+++ b/index.html
@@ -6,189 +6,128 @@
 <title>ANKEB7T</title>
 
 <style>
-:root { --red:#ff0000; --dark:#050000; }
-body,html{
-margin:0;padding:0;background:var(--dark);color:var(--red);
-font-family:'Courier New',monospace;height:100vh;overflow:hidden;
-display:flex;justify-content:center;align-items:center;
+body{
+    margin:0;
+    background:black;
+    color:red;
+    font-family:Courier New, monospace;
+    overflow:hidden;
 }
 
-#c{position:fixed;top:0;left:0;z-index:-1;opacity:.1}
-
-#clock{
-position:fixed;top:20px;right:20px;text-align:right;
-font-size:14px;letter-spacing:2px;z-index:200;
+/* Sağ üst tarih */
+#datetime{
+    position:fixed;
+    top:20px;
+    right:30px;
+    font-size:14px;
+    letter-spacing:3px;
+    opacity:.8;
 }
 
-.bg-text{
-position:fixed;width:100%;text-align:center;z-index:10;
-pointer-events:none;font-size:9vw;font-weight:900;
-letter-spacing:15px;text-transform:uppercase;
-}
-.top-bg{top:12%}
-.bot-bg{bottom:12%}
-
-.shine{
-background:linear-gradient(120deg,#200 35%,#fff 50%,#200 65%);
-background-size:200% auto;
--webkit-background-clip:text;
--webkit-text-fill-color:transparent;
-animation:snake 3.5s linear infinite;
-}
-@keyframes snake{to{background-position:200% center}}
-
-#overlay{
-position:fixed;inset:0;z-index:100;
-display:flex;flex-direction:column;
-justify-content:center;align-items:center;
-background:rgba(5,0,0,.4);
+/* OPEN ekran */
+#openScreen{
+    height:100vh;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
 }
 
-.open-btn{
-padding:20px 60px;border:1px solid var(--red);
-background:transparent;color:var(--red);
-cursor:pointer;letter-spacing:15px;font-size:22px;
+button{
+    background:none;
+    border:1px solid red;
+    color:red;
+    padding:15px 40px;
+    font-size:20px;
+    cursor:pointer;
+    letter-spacing:6px;
 }
 
-#boot-logs{
-display:none;color:var(--red);
-font-size:14px;text-align:left;
-width:280px;margin-top:20px;
+button:hover{
+    background:red;
+    color:black;
 }
 
-#terminal{
-display:none;position:relative;z-index:120;
-width:400px;padding:50px 30px;
-border:1px solid var(--red);
-background:rgba(0,0,0,.9);
+/* İç panel */
+#panel{
+    display:none;
+    height:100vh;
+    align-items:center;
+    justify-content:center;
 }
 
-.main-data{
-text-align:center;font-size:32px;
-font-weight:bold;margin-bottom:40px;
-letter-spacing:10px;
+.box{
+    border:1px solid red;
+    padding:60px;
+    width:350px;
+    text-align:center;
 }
 
-.links{display:flex;flex-direction:column;gap:15px}
-
-.link-item{
-padding:15px;border:1px solid #300;
-text-decoration:none;color:var(--red);
-display:flex;justify-content:center;
-letter-spacing:3px;
+.link{
+    border:1px solid red;
+    padding:15px;
+    margin:20px 0;
+    cursor:pointer;
+    letter-spacing:5px;
 }
 
-.footer{
-margin-top:40px;text-align:center;
-font-size:14px;letter-spacing:12px;
-opacity:.7;
+.link:hover{
+    background:red;
+    color:black;
 }
 </style>
 </head>
 
 <body>
 
-<!-- 🎧 SESLER -->
-<audio id="music" loop>
-<source src="https://cdn.pixabay.com/audio/2022/03/15/audio_c8a4d19a92.mp3">
-</audio>
+<!-- TARİH -->
+<div id="datetime"></div>
 
-<audio id="typing">
-<source src="https://cdn.pixabay.com/audio/2022/03/15/audio_5a9c4e9a91.mp3">
-</audio>
-
-<audio id="beep">
-<source src="https://cdn.pixabay.com/audio/2021/08/04/audio_12b0c7443d.mp3">
-</audio>
-
-<canvas id="c"></canvas>
-<div id="clock"></div>
-
-<div class="bg-text top-bg shine">ANKEB7T</div>
-<div class="bg-text bot-bg shine">ZIRVE</div>
-
-<div id="overlay">
-<button class="open-btn" onclick="startBoot()">[ OPEN ]</button>
-<div id="boot-logs"></div>
+<!-- OPEN EKRANI -->
+<div id="openScreen">
+    <h1 style="letter-spacing:15px;">ANKEB7T</h1>
+    <button onclick="openPanel()">[ OPEN ]</button>
 </div>
 
-<div id="terminal">
-<div class="main-data">ANKEB7T</div>
+<!-- PANEL -->
+<div id="panel">
+    <div class="box">
+        <h2 style="letter-spacing:10px;">ANKEB7T</h2>
 
-<div class="links">
-<a href="https://t.me/allesfurdie" target="_blank" class="link-item">TELEGRAM</a>
-<a href="https://instagram.com/hissedilme" target="_blank" class="link-item">INSTAGRAM</a>
-<a href="https://wa.me/998998780248" target="_blank" class="link-item">WHATSAPP</a>
-</div>
+        <div class="link" onclick="window.open('https://t.me/allesfurdie')">
+            TELEGRAM
+        </div>
 
-<div class="footer">ALLES FUR DIE</div>
+        <div class="link" onclick="window.open('https://instagram.com/dxrbede')">
+            INSTAGRAM
+        </div>
+
+        <div class="link" onclick="window.open('https://wa.me/998998780248')">
+            WHATSAPP
+        </div>
+
+        <p style="margin-top:40px; letter-spacing:8px; opacity:.6;">
+            ALLES FUR DIE
+        </p>
+    </div>
 </div>
 
 <script>
-// MATRIX
-const canvas=document.getElementById('c');
-const ctx=canvas.getContext('2d');
-canvas.width=window.innerWidth;
-canvas.height=window.innerHeight;
-const matrix="01".split("");
-const font_size=14;
-const columns=canvas.width/font_size;
-const drops=Array(Math.floor(columns)).fill(1);
+/* TARİH ANINDA ÇALIŞIR — GECİKME YOK */
+function updateTime(){
+    const now = new Date();
+    const date = now.toLocaleDateString("tr-TR");
+    const time = now.toLocaleTimeString("tr-TR");
+    document.getElementById("datetime").innerHTML = date + "<br>" + time;
+}
 
-function draw(){
-ctx.fillStyle="rgba(0,0,0,.05)";
-ctx.fillRect(0,0,canvas.width,canvas.height);
-ctx.fillStyle="#200";
-ctx.font=font_size+"px monospace";
-for(let i=0;i<drops.length;i++){
-const text=matrix[Math.floor(Math.random()*matrix.length)];
-ctx.fillText(text,i*font_size,drops[i]*font_size);
-if(drops[i]*font_size>canvas.height && Math.random()>0.975) drops[i]=0;
-drops[i]++;
-}}
-setInterval(draw,40);
+updateTime();
+setInterval(updateTime,1000);
 
-// CLOCK
-setInterval(()=>{
-const now=new Date();
-clock.innerHTML=now.toLocaleDateString()+"<br>"+now.toLocaleTimeString();
-},1000);
-
-// BOOT + SESLER
-function startBoot(){
-
-beep.play();
-setTimeout(()=>typing.play(),600);
-setTimeout(()=>{
-music.volume=0.4;
-music.play();
-},1500);
-
-const btn=document.querySelector('.open-btn');
-const logs=document.getElementById('boot-logs');
-btn.style.display='none';
-logs.style.display='block';
-
-const lines=[
-"> Initializing boot sequence...",
-"> Bypassing local encryption...",
-"> Connection established.",
-"> Accessing identity core...",
-"> System Online."
-];
-
-let i=0;
-const interval=setInterval(()=>{
-if(i<lines.length){
-logs.innerHTML+=lines[i]+"<br>";
-i++;
-}else{
-clearInterval(interval);
-setTimeout(()=>{
-overlay.style.display="none";
-terminal.style.display="block";
-},500);
-}},400);
+/* OPEN */
+function openPanel(){
+    document.getElementById("openScreen").style.display="none";
+    document.getElementById("panel").style.display="flex";
 }
 </script>
 
