--- a/index.html
+++ b/index.html
@@ -7,128 +7,137 @@
 
 <style>
 body{
-    margin:0;
-    background:black;
-    color:red;
-    font-family:Courier New, monospace;
-    overflow:hidden;
+margin:0;
+background:black;
+color:red;
+font-family:Courier New, monospace;
+overflow:hidden;
 }
 
-/* Sağ üst tarih */
+/* Büyük arka yazılar */
+.bg{
+position:fixed;
+width:100%;
+text-align:center;
+font-size:120px;
+letter-spacing:30px;
+opacity:.08;
+pointer-events:none;
+}
+
+.top{ top:50px; }
+.bottom{ bottom:40px; }
+
+/* Shine efekti */
+.scan{
+position:fixed;
+width:100%;
+height:2px;
+background:red;
+animation:scan 3s linear infinite;
+opacity:.5;
+}
+@keyframes scan{
+0%{top:0;}
+100%{top:100%;}
+}
+
+/* Tarih */
 #datetime{
-    position:fixed;
-    top:20px;
-    right:30px;
-    font-size:14px;
-    letter-spacing:3px;
-    opacity:.8;
+position:fixed;
+top:20px;
+right:30px;
+letter-spacing:3px;
+font-size:14px;
 }
 
-/* OPEN ekran */
-#openScreen{
-    height:100vh;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    flex-direction:column;
+/* Boot yazıları */
+#boot{
+position:absolute;
+top:50%;
+left:50%;
+transform:translate(-50%,-50%);
+text-align:left;
+letter-spacing:2px;
 }
 
-button{
-    background:none;
-    border:1px solid red;
-    color:red;
-    padding:15px 40px;
-    font-size:20px;
-    cursor:pointer;
-    letter-spacing:6px;
-}
-
-button:hover{
-    background:red;
-    color:black;
-}
-
-/* İç panel */
+/* Panel */
 #panel{
-    display:none;
-    height:100vh;
-    align-items:center;
-    justify-content:center;
+display:none;
+height:100vh;
+align-items:center;
+justify-content:center;
 }
 
 .box{
-    border:1px solid red;
-    padding:60px;
-    width:350px;
-    text-align:center;
+border:1px solid red;
+padding:60px;
+width:350px;
+text-align:center;
 }
 
 .link{
-    border:1px solid red;
-    padding:15px;
-    margin:20px 0;
-    cursor:pointer;
-    letter-spacing:5px;
+border:1px solid red;
+padding:15px;
+margin:20px 0;
+cursor:pointer;
+letter-spacing:5px;
 }
 
 .link:hover{
-    background:red;
-    color:black;
+background:red;
+color:black;
 }
 </style>
 </head>
 
 <body>
 
-<!-- TARİH -->
+<div class="bg top">ANKEB7T</div>
+<div class="bg bottom">ZIRVE</div>
+<div class="scan"></div>
+
 <div id="datetime"></div>
 
-<!-- OPEN EKRANI -->
-<div id="openScreen">
-    <h1 style="letter-spacing:15px;">ANKEB7T</h1>
-    <button onclick="openPanel()">[ OPEN ]</button>
+<!-- BOOT -->
+<div id="boot">
+<p>> Initializing boot sequence...</p>
+<p>> Bypassing local encryption...</p>
+<p>> Connection established...</p>
+<p>> Accessing identity core...</p>
 </div>
 
 <!-- PANEL -->
 <div id="panel">
-    <div class="box">
-        <h2 style="letter-spacing:10px;">ANKEB7T</h2>
+<div class="box">
+<h2 style="letter-spacing:10px;">ANKEB7T</h2>
 
-        <div class="link" onclick="window.open('https://t.me/allesfurdie')">
-            TELEGRAM
-        </div>
+<div class="link" onclick="window.open('https://t.me/allesfurdie')">TELEGRAM</div>
+<div class="link" onclick="window.open('https://instagram.com/dxrbede')">INSTAGRAM</div>
+<div class="link" onclick="window.open('https://wa.me/998998780248')">WHATSAPP</div>
 
-        <div class="link" onclick="window.open('https://instagram.com/dxrbede')">
-            INSTAGRAM
-        </div>
-
-        <div class="link" onclick="window.open('https://wa.me/998998780248')">
-            WHATSAPP
-        </div>
-
-        <p style="margin-top:40px; letter-spacing:8px; opacity:.6;">
-            ALLES FUR DIE
-        </p>
-    </div>
+<p style="margin-top:40px; letter-spacing:8px; opacity:.6;">
+ALLES FUR DIE
+</p>
+</div>
 </div>
 
 <script>
-/* TARİH ANINDA ÇALIŞIR — GECİKME YOK */
+/* TARİH GECİKMESİZ */
 function updateTime(){
-    const now = new Date();
-    const date = now.toLocaleDateString("tr-TR");
-    const time = now.toLocaleTimeString("tr-TR");
-    document.getElementById("datetime").innerHTML = date + "<br>" + time;
+const now=new Date();
+const d=now.toLocaleDateString("tr-TR");
+const t=now.toLocaleTimeString("tr-TR");
+document.getElementById("datetime").innerHTML=d+"<br>"+t;
 }
-
 updateTime();
 setInterval(updateTime,1000);
 
-/* OPEN */
-function openPanel(){
-    document.getElementById("openScreen").style.display="none";
-    document.getElementById("panel").style.display="flex";
-}
+/* BOOT -> PANEL GEÇİŞ */
+setTimeout(()=>{
+document.getElementById("boot").style.display="none";
+document.getElementById("panel").style.display="flex";
+},3500);
 </script>
 
 </body>
